--- a/TOneV2/Code/TOneV2/TOne.BusinessEntity.Web/Client/Views/Switchs.html
+++ b/TOneV2/Code/TOneV2/TOne.BusinessEntity.Web/Client/Views/Switchs.html
@@ -65,5 +65,5 @@
         </tr>
     </table>
     All Switch: {{totalServerItems}}
-   PageSize: <input type="text" value="10" ng-model="PageSideNeeded"/>Page Index:<input type="text" value="1" ng-model="PageIndexNeeded" /><input type="button" value="Get Data" ng-click="setPagingData()" ng-model="PageSideNeeded">
+   PageSize: <input type="text" value="10" ng-model="PageSideNeeded"/>Page Index:<input type="text" value="1" ng-model="PageIndexNeeded" /><input type="button" value="Get Data" ng-click="setPagingData()">
 </div>
