--- a/TOneV2/Code/TOneV2/TOne.BI.Web/Client/Views/Dashboards/SeniorManagementDashboard.html
+++ b/TOneV2/Code/TOneV2/TOne.BI.Web/Client/Views/Dashboards/SeniorManagementDashboard.html
@@ -26,7 +26,7 @@
     <vr-row removeline>
         <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
             <div transclude-to="buttons">
-                <vr-button type="Search" formname="formFilter" data-onclick="updateCharts" isasynchronous=" true"></vr-button>
+                <vr-button type="Search" formname="formFilter" data-onclick="updateCharts"></vr-button>
             </div>
         </vr-actionbar>
     </vr-row>
