--- a/TOneV2/Code/TOneV2/TOne.LCR.Web/Client/Views/Management/RouteRuleEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.LCR.Web/Client/Views/Management/RouteRuleEditor.html
@@ -79,7 +79,7 @@
                 <vr-columns colnum="12" simplecol>
                     <vr-actionbar showcollapsebutton="false" issectioncollapsed="false">
                         <div transclude-to="buttons">
-                            <vr-button type="Save" formname="formRouteRuleEditor" data-onclick="saveRule" isasynchronous=" true"></vr-button>
+                            <vr-button type="Save" formname="formRouteRuleEditor" data-onclick="saveRule"></vr-button>
                             <vr-button type="Close" data-onclick="hide"></vr-button>
                         </div>
                     </vr-actionbar>
