--- a/TOneV2/Code/TOneV2/TOne.BI.Web/Client/Views/Dashboards/TopManagementDashboard.html
+++ b/TOneV2/Code/TOneV2/TOne.BI.Web/Client/Views/Dashboards/TopManagementDashboard.html
@@ -23,7 +23,7 @@
     <vr-row removeline>
         <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
             <div transclude-to="buttons">
-                <vr-button type="Search" formname="formFilter" data-onclick="updateChart" isasynchronous=" true"></vr-button>
+                <vr-button type="Search" formname="formFilter" data-onclick="updateChart"></vr-button>
             </div>
         </vr-actionbar>
     </vr-row>
