--- a/TOneV2/Code/TOneV2/TOne.BI.Web/Client/Views/Dashboards/ZoneDashboard.html
+++ b/TOneV2/Code/TOneV2/TOne.BI.Web/Client/Views/Dashboards/ZoneDashboard.html
@@ -33,7 +33,7 @@
     <vr-row removeline>
         <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">           
             <div transclude-to="buttons">
-                <vr-button type="Search" formname="formFilter" data-onclick="updateData" isasynchronous=" true"></vr-button>
+                <vr-button type="Search" formname="formFilter" data-onclick="updateData"></vr-button>
             </div>
         </vr-actionbar>
     </vr-row>
