--- a/TOneV2/Code/TOneV2/TOne.BI.Web/Client/Views/Dashboards/DynamicDashboadTemplates/VisualElementEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.BI.Web/Client/Views/Dashboards/DynamicDashboadTemplates/VisualElementEditor.html
@@ -1,21 +1,26 @@
 ﻿<div vr-modalcontent ng-controller="BI_VisualElementEditorController" width="'60%'">
     <vr-modalbody maxheight="'500px'">
         <vr-form name="formChartSettings">
-            <vr-columns colnum="3">
-                <vr-select datasource="numberOfColumns" datatextfield="description" datavaluefield="value" label="Row Space" selectedvalues="selectedNumberOfColumns" isrequired hidefilterbox></vr-select>
-            </vr-columns>
-            <vr-columns colnum="3">
-                <vr-select datasource="elementTypes" datatextfield="description" datavaluefield="value" label="Element Type" selectedvalues="selectedElementType" isrequired hidefilterbox></vr-select>
-            </vr-columns>
-            <vr-columns colnum="3">
-                <vr-select datasource="operationTypes" datatextfield="description" datavaluefield="value" label="Data Type" selectedvalues="selectedOperationType" isrequired hidefilterbox></vr-select>
-            </vr-columns>
-            <vr-columns colnum="3" ng-show=" selectedOperationType.value == 'TopEntities'">
-                <vr-select datasource="entityTypes" datatextfield="description" datavaluefield="value" label="Entity" selectedvalues="selectedEntityType" isrequired hidefilterbox></vr-select>
-            </vr-columns>
-            <vr-columns colnum="3">
-                <vr-select datasource="measureTypes" datatextfield="description" datavaluefield="value" label="Measures" selectedvalues="selectedMeasureTypes" isrequired ismultipleselection hidefilterbox></vr-select>
-            </vr-columns>
+            <vr-row removeline>
+                <vr-columns colnum="3">
+                    <vr-select datasource="numberOfColumns" datatextfield="description" datavaluefield="value" label="Row Space" selectedvalues="selectedNumberOfColumns" isrequired hidefilterbox></vr-select>
+                </vr-columns>
+                <vr-columns colnum="3">
+                    <vr-select datasource="directives" datatextfield="description" datavaluefield="value" label="Element Type" selectedvalues="selectedDirective" isrequired hidefilterbox></vr-select>
+                </vr-columns>
+            </vr-row>
+            <vr-row removeline>
+                <vr-columns colnum="3">
+                    <vr-select datasource="operationTypes" datatextfield="description" datavaluefield="value" label="Data Type" selectedvalues="selectedOperationType" isrequired hidefilterbox></vr-select>
+                </vr-columns>
+                <vr-columns colnum="3" ng-show=" selectedOperationType.value == 'TopEntities'">
+                    <vr-select datasource="entityTypes" datatextfield="description" datavaluefield="value" label="Entity" selectedvalues="selectedEntityType" isrequired hidefilterbox></vr-select>
+                </vr-columns>
+                <vr-columns colnum="3">
+                    <vr-select datasource="measureTypes" datatextfield="description" datavaluefield="value" label="Measures" selectedvalues="selectedMeasureTypes" isrequired ismultipleselection hidefilterbox></vr-select>
+                </vr-columns>
+            </vr-row>
+            
         </vr-form>
     </vr-modalbody>
     <div>
