--- a/TOneV2/Code/TOneV2/TOne.BusinessEntity.Web/Client/Views/SwitchManagment.html
+++ b/TOneV2/Code/TOneV2/TOne.BusinessEntity.Web/Client/Views/SwitchManagment.html
@@ -4,8 +4,7 @@
         <div ng-hide="filterSectionCollapsed">
             <vr-row removeline>
                 <vr-columns colnum="2">
-                    <vr-select label="Switches:" datasource="switches" ng-model="switchName"
-                               datatextfield="Name" datavaluefield="SwitchId" selectedvalues="selectedSwitches" ismultipleselection></vr-select>
+                    <vr-textbox label="Switches:" value="switchName"></vr-textbox>
                 </vr-columns>
             </vr-row>
             <vr-row></vr-row>
@@ -14,21 +13,41 @@
             <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
                 <div transclude-to="buttons">
                     <vr-button type="Search" formname="formFilter" data-onclick="GetSwitchsDataSource" isasynchronous="true"></vr-button>
-                    <vr-button type="Reset" ng-show="false"></vr-button>
+                    <vr-button type="Reset" data-onclick="resetSearchForm"></vr-button>
+                    <button type="button" class="btn btn-default btncustom  action-bar-btn-icon no-float" aria-label="Left Align" ng-click="AddNewSwitch()">Add<span style="padding-left:4px" class="glyphicon glyphicon glyphicon-plus-sign" aria-hidden="true"></span></button>
                 </div>
             </vr-actionbar>
         </vr-row>
     </vr-form>
-    <div  vr-loader="isGettingData">
+    <div>
         <vr-row>
-            <vr-columns colnum="2" simplecol>
-                <vr-datagrid datasource="SwitchsDataSource">
+            <vr-columns colnum="12" simplecol>
+                <vr-datagrid datasource="SwitchsDataSource" maxheight="300px" loadmoredata="loadDataonScrolling" on-ready="gridReady" menuactions="gridMenuActions">
                     <vr-datagridcolumn headertext="'Switch Id'" field="'SwitchId'">
                     </vr-datagridcolumn>
-                    <vr-datagridcolumn headertext="'Switch Name'" field="'Name'">
+                    <vr-datagridcolumn headertext="'Switch Name'" field="'Name'" onsortchanged="onGridSortChanged">
+                    </vr-datagridcolumn>
+                    <vr-datagridcolumn headertext="'Symbol'" field="'Symbol'">
+                    </vr-datagridcolumn>
+                    <vr-datagridcolumn headertext="'Description'" field="'Description'">
+                    </vr-datagridcolumn>
+                    <vr-datagridcolumn headertext="'Last CDR Import Tag'" field="'LastCDRImportTag'">
+                    </vr-datagridcolumn>
+                    <vr-datagridcolumn headertext="'Last Import'" field="'LastImport'">
+                    </vr-datagridcolumn>
+                    <vr-datagridcolumn headertext="'Last Attempt'" field="'LastAttempt'">
+                    </vr-datagridcolumn>
+                    <vr-datagridcolumn headertext="'Enable CDR Import'" field="'Enable_CDR_Import'">
+                    </vr-datagridcolumn>
+                    <vr-datagridcolumn headertext="'Enable Routing'" field="'Enable_Routing'">
+                    </vr-datagridcolumn>
+                    <vr-datagridcolumn headertext="'Last Route Update'" field="'LastRouteUpdate'">
                     </vr-datagridcolumn>
                 </vr-datagrid>
             </vr-columns>
+            <vr-label style="float:right;margin-right:25px">
+                Page {{GridPagerSettings.currentPage-1}} of {{GridPagerSettings.currentPage * GridPagerSettings.pageSize}}
+            </vr-label>
         </vr-row>
         <div>
         </div>
