--- a/TOneV2/Code/TOneV2/TOne.BusinessEntity.Web/Client/Views/SwitchEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.BusinessEntity.Web/Client/Views/SwitchEditor.html
@@ -63,8 +63,8 @@
     <div>
         <vr-actionbar showcollapsebutton="false" issectioncollapsed="false">
             <div transclude-to="buttons">
-                <vr-button type="Save" data-onclick="SaveSwitch" formname="formSwitchEditor"></vr-button>
-                <vr-button type="Close" data-onclick="$hide"></vr-button>
+                <vr-button type="Save" data-onclick="saveSwitch" formname="formSwitchEditor"></vr-button>
+                <vr-button type="Close" data-onclick="close"></vr-button>
             </div>
         </vr-actionbar>
     </div>
