--- a/TOneV2/Code/TOneV2/TOne.BusinessEntity.Web/Client/Views/SwitchManagment.html
+++ b/TOneV2/Code/TOneV2/TOne.BusinessEntity.Web/Client/Views/SwitchManagment.html
@@ -12,17 +12,18 @@
         <vr-row removeline>
             <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
                 <div transclude-to="buttons">
-                    <vr-button type="Search" formname="formFilter" data-onclick="GetSwitchsDataSource" isasynchronous="true"></vr-button>
+                    <vr-button type="Search" formname="formFilter" data-onclick="getSwitchsDataSource" isasynchronous="true"></vr-button>
                     <vr-button type="Reset" data-onclick="resetSearchForm"></vr-button>
-                    <button type="button" class="btn btn-default btncustom  action-bar-btn-icon no-float" aria-label="Left Align" ng-click="AddNewSwitch()">Add<span style="padding-left:4px" class="glyphicon glyphicon glyphicon-plus-sign" aria-hidden="true"></span></button>
+                    <vr-button type="Add" data-onclick="AddNewSwitch"></vr-button>
+                    <!--<button type="button" class="btn btn-default btncustom  action-bar-btn-icon no-float" aria-label="Left Align" ng-click="AddNewSwitch()">Add<span style="padding-left:4px" class="glyphicon glyphicon glyphicon-plus-sign" aria-hidden="true"></span></button>-->
                 </div>
             </vr-actionbar>
         </vr-row>
     </vr-form>
-    <div>
+    <div vr-loader="isGettingData">
         <vr-row>
             <vr-columns colnum="12" simplecol>
-                <vr-datagrid datasource="SwitchsDataSource" maxheight="300px" loadmoredata="loadDataonScrolling" on-ready="gridReady" menuactions="gridMenuActions">
+                <vr-datagrid datasource="switchsDataSource" maxheight="300px" loadmoredata="loadDataonScrolling" on-ready="gridReady" menuactions="gridMenuActions">
                     <vr-datagridcolumn headertext="'Switch Id'" field="'SwitchId'">
                     </vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'Switch Name'" field="'Name'" onsortchanged="onGridSortChanged">
@@ -46,7 +47,7 @@
                 </vr-datagrid>
             </vr-columns>
             <vr-label style="float:right;margin-right:25px">
-                Page {{GridPagerSettings.currentPage-1}} of {{GridPagerSettings.currentPage * GridPagerSettings.pageSize}}
+                Page {{gridPagerSettings.currentPage-1}} of {{gridPagerSettings.currentPage * gridPagerSettings.pageSize}}
             </vr-label>
         </vr-row>
         <div>
