--- a/TOneV2/Code/TOneV2/TOne.LCR.Web/Client/Views/Management/RouteDetailGrid.html
+++ b/TOneV2/Code/TOneV2/TOne.LCR.Web/Client/Views/Management/RouteDetailGrid.html
@@ -1,1 +1,10 @@
-﻿
+﻿    <vr-row>
+        <vr-columns colnum="12" simplecol>
+            <vr-datagrid data-on-ready="onMainGridReady" datasource="routes"
+                         pagersettings="mainGridPagerSettings" menuactions="gridMenuActions">
+            </vr-datagrid>
+        </vr-columns>
+        <!--<vr-label style="float:right;margin-right:25px">
+            Page {{currentPage}} of {{numberOfPages}}
+        </vr-label>-->
+    </vr-row>
