--- a/TOneV2/Code/TOneV2/TOne.BusinessEntity.Web/Client/Views/SwitchManagment.html
+++ b/TOneV2/Code/TOneV2/TOne.BusinessEntity.Web/Client/Views/SwitchManagment.html
@@ -14,8 +14,8 @@
                 <div transclude-to="buttons">
                     <vr-button type="Search" formname="formFilter" data-onclick="getSwitchsDataSource" isasynchronous="true"></vr-button>
                     <vr-button type="Reset" data-onclick="resetSearchForm"></vr-button>
-                    <vr-button type="Add" data-onclick="AddNewSwitch"></vr-button>
-                    <!--<button type="button" class="btn btn-default btncustom  action-bar-btn-icon no-float" aria-label="Left Align" ng-click="AddNewSwitch()">Add<span style="padding-left:4px" class="glyphicon glyphicon glyphicon-plus-sign" aria-hidden="true"></span></button>-->
+                    <vr-button type="Add" data-onclick="openNewSwitch"></vr-button>
+                    <!--<button type="button" class="btn btn-default btncustom  action-bar-btn-icon no-float" aria-label="Left Align" ng-click="openNewSwitch()">Add<span style="padding-left:4px" class="glyphicon glyphicon glyphicon-plus-sign" aria-hidden="true"></span></button>-->
                 </div>
             </vr-actionbar>
         </vr-row>
@@ -26,7 +26,7 @@
                 <vr-datagrid datasource="switchsDataSource" maxheight="300px" loadmoredata="loadDataonScrolling" on-ready="gridReady" menuactions="gridMenuActions">
                     <vr-datagridcolumn headertext="'Switch Id'" field="'SwitchId'">
                     </vr-datagridcolumn>
-                    <vr-datagridcolumn headertext="'Switch Name'" field="'Name'" onsortchanged="onGridSortChanged">
+                    <vr-datagridcolumn headertext="'Switch Name'" field="'Name'" ><!--onsortchanged="onGridSortChanged"-->
                     </vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'Symbol'" field="'Symbol'">
                     </vr-datagridcolumn>
