--- a/TOneV2/Code/TOneV2/TOne.BusinessEntity.Web/Client/Views/SwitchEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.BusinessEntity.Web/Client/Views/SwitchEditor.html
@@ -5,15 +5,15 @@
 
             <vr-row>
                 <vr-columns colnum="6">
-                    <vr-textbox label="Name" value="Name"></vr-textbox>
+                    <vr-textbox label="Name" value="name"></vr-textbox>
                 </vr-columns>
                 <vr-columns colnum="6">
-                    <vr-textbox label="Symbol" value="Symbol"></vr-textbox>
+                    <vr-textbox label="Symbol" value="symbol"></vr-textbox>
                 </vr-columns>
             </vr-row>
             <vr-row>
                 <vr-columns colnum="12">
-                    <textarea class="form-control" ng-model="Description" text="Description" />
+                    <textarea class="form-control" ng-model="description" text="Description" />
                 </vr-columns>
             </vr-row>
             <vr-row>
